setup enviroment, train AI and test AI cells added

--- a/gym_game.ipynb
+++ b/gym_game.ipynb
@@ -57,6 +57,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Train AI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gym\n",
+    "import neat\n",
+    "import os\n",
+    "import math\n",
+    "import pickle\n",
+    "\n",
+    "def convert_to_int_action(action):\n",
+    "    int_action = 1  # No push\n",
+    "\n",
+    "    if action[0] > 0.5:\n",
+    "        int_action = 2  # Right push\n",
+    "    elif action[1] > 0.5:\n",
+    "        int_action = 0  # Left push\n",
+    "    return int_action\n",
+    "\n",
+    "def ai_train(genomes, config):\n",
+    "    nets = []  # Neural networks/brain\n",
+    "    ge = []  # Genes\n",
+    "\n",
+    "    # Setting up AI\n",
+    "    for _, g in genomes:\n",
+    "        net = neat.nn.FeedForwardNetwork.create(g, config)  # Getting values from txt\n",
+    "        nets.append(net)  # Appending every Neural Network to array\n",
+    "        g.fitness = 0\n",
+    "        ge.append(g)  # Appending every gene to array.\n",
+    "\n",
+    "    # training every agent\n",
+    "    for g, net in zip(ge, nets):\n",
+    "        # Start game\n",
+    "        state = env.reset()\n",
+    "        done = False\n",
+    "\n",
+    "        # Variables for calculating fitness\n",
+    "        high_vel = -math.inf\n",
+    "        low_vel = math.inf\n",
+    "        elapsed_steps = 0\n",
+    "\n",
+    "        while not done:\n",
+    "            action = net.activate((state))  # send state to AI\n",
+    "\n",
+    "            int_action = convert_to_int_action(action)\n",
+    "            state, reward, done, info = env.step(int_action)\n",
+    "            g.fitness += reward\n",
+    "            pos, vel = state\n",
+    "            elapsed_steps += 1\n",
+    "\n",
+    "            if vel > high_vel:\n",
+    "                high_vel = vel\n",
+    "            if vel < low_vel:\n",
+    "                low_vel = vel\n",
+    "\n",
+    "# Environment setup\n",
+    "env = gym.make(\"MountainCar-v0\")\n",
+    "env._max_episode_steps = 1000\n",
+    "\n",
+    "# Getting file with values\n",
+    "config_path = os.path.abspath(\"config-feedforward.txt\")\n",
+    "config = neat.Config(neat.DefaultGenome, neat.DefaultReproduction, neat.DefaultSpeciesSet, neat.DefaultStagnation, config_path)\n",
+    "p = neat.Population(config)\n",
+    "\n",
+    "p.add_reporter(neat.StdOutReporter(True))  # printing stats\n",
+    "\n",
+    "num_training_generations = 10\n",
+    "winner = p.run(ai_train, num_training_generations)\n",
+    "print(winner)\n",
+    "\n",
+    "# Save best gene in Pickle file\n",
+    "file = open('winner_neat', 'wb')\n",
+    "pickle.dump(winner, file)\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Close window\n",
     "if you force interupt the game, the window will still be open. Run this to close the window"
    ]
