PyGame gym, which makes it possible to quit and use keyboard

--- a/gym_game.ipynb
+++ b/gym_game.ipynb
@@ -4,51 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Human keyboard\n",
-    "Remember to click on the bottom bar for the keyboard input to work.\\\n",
-    "<img src=\"click.png\" alt=\"drawing\" width=\"500\"/>"
+    "# Human keyboard"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-298.0\n"
+      "-100.0\n"
      ]
     }
    ],
    "source": [
     "import gym\n",
     "import keyboard\n",
-    "env = gym.make(\"MountainCar-v0\")\n",
-    "env._max_episode_steps = 1000\n",
+    "env = gym.make(\"MountainCar-v0\", new_step_api=True, render_mode='human')\n",
+    "env._max_episode_steps = 100\n",
     "\n",
     "# Play\n",
     "state = env.reset()  # [position, velocity]\n",
-    "done = False\n",
+    "terminated = False # True if the player dies or wins\n",
+    "truncated = False # True if the time runs out\n",
     "score = 0\n",
     "\n",
-    "while not done:\n",
+    "while not terminated and not truncated:\n",
+    "    #Close window with ESC key\n",
+    "    if keyboard.is_pressed('esc'):\n",
+    "        env.close()\n",
+    "        assert False\n",
+    "\n",
     "    # Read keyboard input\n",
     "    int_action = 1  # No push\n",
-    "\n",
     "    if keyboard.is_pressed('right'):\n",
     "        int_action = 2  # right push\n",
     "    elif keyboard.is_pressed('left'):\n",
     "        int_action = 0  # left push\n",
     "\n",
     "    # Send input to game\n",
-    "    state, reward, done, info = env.step(int_action)\n",
+    "    state, reward, terminated, truncated, info = env.step(int_action)\n",
     "\n",
     "    score += reward\n",
-    "\n",
-    "    # Render new frame\n",
-    "    env.render()\n",
     "print(score)\n",
     "env.close()"
    ]
@@ -57,14 +57,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train AI"
+    "# AI enviroment setup\n",
+    "run once before running the \"AI test\" and \"AI train block\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\3\\Anaconda3\\envs\\ai1\\lib\\site-packages\\neat\\config.py:176: DeprecationWarning: Using default False for 'no_fitness_termination'\n",
+      "  DeprecationWarning)\n",
+      "c:\\Users\\3\\Anaconda3\\envs\\ai1\\lib\\site-packages\\neat\\config.py:57: DeprecationWarning: Using default 'false' for 'single_structural_mutation'\n",
+      "  DeprecationWarning)\n",
+      "c:\\Users\\3\\Anaconda3\\envs\\ai1\\lib\\site-packages\\neat\\config.py:57: DeprecationWarning: Using default 'default' for 'structural_mutation_surer'\n",
+      "  DeprecationWarning)\n",
+      "c:\\Users\\3\\Anaconda3\\envs\\ai1\\lib\\site-packages\\neat\\config.py:57: DeprecationWarning: Using default 'gaussian' for 'bias_init_type'\n",
+      "  DeprecationWarning)\n",
+      "c:\\Users\\3\\Anaconda3\\envs\\ai1\\lib\\site-packages\\neat\\config.py:57: DeprecationWarning: Using default 'gaussian' for 'response_init_type'\n",
+      "  DeprecationWarning)\n",
+      "c:\\Users\\3\\Anaconda3\\envs\\ai1\\lib\\site-packages\\neat\\config.py:57: DeprecationWarning: Using default 'gaussian' for 'weight_init_type'\n",
+      "  DeprecationWarning)\n",
+      "c:\\Users\\3\\Anaconda3\\envs\\ai1\\lib\\site-packages\\neat\\config.py:57: DeprecationWarning: Using default 0.0 for 'enabled_rate_to_true_add'\n",
+      "  DeprecationWarning)\n",
+      "c:\\Users\\3\\Anaconda3\\envs\\ai1\\lib\\site-packages\\neat\\config.py:57: DeprecationWarning: Using default 0.0 for 'enabled_rate_to_false_add'\n",
+      "  DeprecationWarning)\n",
+      "c:\\Users\\3\\Anaconda3\\envs\\ai1\\lib\\site-packages\\neat\\config.py:57: DeprecationWarning: Using default 2 for 'min_species_size'\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import gym\n",
     "import neat\n",
@@ -81,6 +107,173 @@
     "        int_action = 0  # Left push\n",
     "    return int_action\n",
     "\n",
+    "# Getting file with values\n",
+    "config_path = os.path.abspath(\"config-feedforward.txt\")\n",
+    "config = neat.Config(neat.DefaultGenome, neat.DefaultReproduction, neat.DefaultSpeciesSet, neat.DefaultStagnation, config_path)\n",
+    "p = neat.Population(config)\n",
+    "\n",
+    "p.add_reporter(neat.StdOutReporter(True))  # printing stats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train AI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " ****** Running generation 0 ****** \n",
+      "\n",
+      "Population's average fitness: -1000.00000 stdev: 0.00000\n",
+      "Best fitness: -1000.00000 - size: (2, 4) - species 1 - id 1\n",
+      "Average adjusted fitness: 0.000\n",
+      "Mean genetic distance 1.002, standard deviation 0.329\n",
+      "Population of 50 members in 1 species:\n",
+      "   ID   age  size  fitness  adj fit  stag\n",
+      "  ====  ===  ====  =======  =======  ====\n",
+      "     1    0    50  -1000.0    0.000     0\n",
+      "Total extinctions: 0\n",
+      "Generation time: 2.392 sec\n",
+      "\n",
+      " ****** Running generation 1 ****** \n",
+      "\n",
+      "Population's average fitness: -1000.00000 stdev: 0.00000\n",
+      "Best fitness: -1000.00000 - size: (2, 4) - species 1 - id 1\n",
+      "Average adjusted fitness: 0.000\n",
+      "Mean genetic distance 1.111, standard deviation 0.354\n",
+      "Population of 50 members in 1 species:\n",
+      "   ID   age  size  fitness  adj fit  stag\n",
+      "  ====  ===  ====  =======  =======  ====\n",
+      "     1    1    50  -1000.0    0.000     1\n",
+      "Total extinctions: 0\n",
+      "Generation time: 2.347 sec (2.370 average)\n",
+      "\n",
+      " ****** Running generation 2 ****** \n",
+      "\n",
+      "Population's average fitness: -1000.00000 stdev: 0.00000\n",
+      "Best fitness: -1000.00000 - size: (2, 4) - species 1 - id 1\n",
+      "Average adjusted fitness: 0.000\n",
+      "Mean genetic distance 1.224, standard deviation 0.396\n",
+      "Population of 50 members in 1 species:\n",
+      "   ID   age  size  fitness  adj fit  stag\n",
+      "  ====  ===  ====  =======  =======  ====\n",
+      "     1    2    50  -1000.0    0.000     2\n",
+      "Total extinctions: 0\n",
+      "Generation time: 2.332 sec (2.357 average)\n",
+      "\n",
+      " ****** Running generation 3 ****** \n",
+      "\n",
+      "Population's average fitness: -1000.00000 stdev: 0.00000\n",
+      "Best fitness: -1000.00000 - size: (2, 4) - species 1 - id 1\n",
+      "Average adjusted fitness: 0.000\n",
+      "Mean genetic distance 1.335, standard deviation 0.537\n",
+      "Population of 50 members in 1 species:\n",
+      "   ID   age  size  fitness  adj fit  stag\n",
+      "  ====  ===  ====  =======  =======  ====\n",
+      "     1    3    50  -1000.0    0.000     3\n",
+      "Total extinctions: 0\n",
+      "Generation time: 2.305 sec (2.344 average)\n",
+      "\n",
+      " ****** Running generation 4 ****** \n",
+      "\n",
+      "Population's average fitness: -1000.00000 stdev: 0.00000\n",
+      "Best fitness: -1000.00000 - size: (2, 4) - species 1 - id 1\n",
+      "Average adjusted fitness: 0.000\n",
+      "Mean genetic distance 1.386, standard deviation 0.485\n",
+      "Population of 50 members in 1 species:\n",
+      "   ID   age  size  fitness  adj fit  stag\n",
+      "  ====  ===  ====  =======  =======  ====\n",
+      "     1    4    50  -1000.0    0.000     4\n",
+      "Total extinctions: 0\n",
+      "Generation time: 2.146 sec (2.304 average)\n",
+      "\n",
+      " ****** Running generation 5 ****** \n",
+      "\n",
+      "Population's average fitness: -996.22000 stdev: 26.46000\n",
+      "Best fitness: -811.00000 - size: (2, 3) - species 1 - id 276\n",
+      "Average adjusted fitness: 0.020\n",
+      "Mean genetic distance 1.123, standard deviation 0.492\n",
+      "Population of 50 members in 1 species:\n",
+      "   ID   age  size  fitness  adj fit  stag\n",
+      "  ====  ===  ====  =======  =======  ====\n",
+      "     1    5    50   -811.0    0.020     0\n",
+      "Total extinctions: 0\n",
+      "Generation time: 2.092 sec (2.269 average)\n",
+      "\n",
+      " ****** Running generation 6 ****** \n",
+      "\n",
+      "Population's average fitness: -999.78000 stdev: 1.54000\n",
+      "Best fitness: -989.00000 - size: (2, 3) - species 1 - id 276\n",
+      "Average adjusted fitness: 0.020\n",
+      "Mean genetic distance 1.115, standard deviation 0.404\n",
+      "Population of 50 members in 1 species:\n",
+      "   ID   age  size  fitness  adj fit  stag\n",
+      "  ====  ===  ====  =======  =======  ====\n",
+      "     1    6    50   -989.0    0.020     1\n",
+      "Total extinctions: 0\n",
+      "Generation time: 2.138 sec (2.250 average)\n",
+      "\n",
+      " ****** Running generation 7 ****** \n",
+      "\n",
+      "Population's average fitness: -996.78000 stdev: 22.54000\n",
+      "Best fitness: -839.00000 - size: (2, 3) - species 1 - id 276\n",
+      "Average adjusted fitness: 0.020\n",
+      "Mean genetic distance 0.965, standard deviation 0.333\n",
+      "Population of 50 members in 1 species:\n",
+      "   ID   age  size  fitness  adj fit  stag\n",
+      "  ====  ===  ====  =======  =======  ====\n",
+      "     1    7    50   -839.0    0.020     2\n",
+      "Total extinctions: 0\n",
+      "Generation time: 2.204 sec (2.245 average)\n",
+      "\n",
+      " ****** Running generation 8 ****** \n",
+      "\n",
+      "Population's average fitness: -997.02000 stdev: 14.74922\n",
+      "Best fitness: -915.00000 - size: (2, 3) - species 1 - id 401\n",
+      "Average adjusted fitness: 0.035\n",
+      "Mean genetic distance 1.206, standard deviation 0.352\n",
+      "Population of 50 members in 1 species:\n",
+      "   ID   age  size  fitness  adj fit  stag\n",
+      "  ====  ===  ====  =======  =======  ====\n",
+      "     1    8    50   -915.0    0.035     3\n",
+      "Total extinctions: 0\n",
+      "Generation time: 2.199 sec (2.240 average)\n",
+      "\n",
+      " ****** Running generation 9 ****** \n",
+      "\n",
+      "Population's average fitness: -992.58000 stdev: 39.13571\n",
+      "Best fitness: -742.00000 - size: (2, 3) - species 1 - id 401\n",
+      "Average adjusted fitness: 0.029\n",
+      "Mean genetic distance 1.246, standard deviation 0.374\n",
+      "Population of 50 members in 1 species:\n",
+      "   ID   age  size  fitness  adj fit  stag\n",
+      "  ====  ===  ====  =======  =======  ====\n",
+      "     1    9    50   -742.0    0.029     0\n",
+      "Total extinctions: 0\n",
+      "Generation time: 2.150 sec (2.231 average)\n",
+      "Key: 401\n",
+      "Fitness: -742.0\n",
+      "Nodes:\n",
+      "\t0 DefaultNodeGene(key=0, bias=-0.5171200277800707, response=1.0, activation=sigmoid, aggregation=sum)\n",
+      "\t1 DefaultNodeGene(key=1, bias=-0.03087441999383047, response=1.0, activation=sigmoid, aggregation=sum)\n",
+      "Connections:\n",
+      "\tDefaultConnectionGene(key=(-2, 0), weight=2.1790585722080364, enabled=True)\n",
+      "\tDefaultConnectionGene(key=(-2, 1), weight=-1.3831224485826012, enabled=True)\n",
+      "\tDefaultConnectionGene(key=(-1, 0), weight=-1.564197260668313, enabled=True)\n"
+     ]
+    }
+   ],
+   "source": [
     "def ai_train(genomes, config):\n",
     "    nets = []  # Neural networks/brain\n",
     "    ge = []  # Genes\n",
@@ -96,18 +289,19 @@
     "    for g, net in zip(ge, nets):\n",
     "        # Start game\n",
     "        state = env.reset()\n",
-    "        done = False\n",
+    "        terminated = False\n",
+    "        truncated = False\n",
     "\n",
     "        # Variables for calculating fitness\n",
     "        high_vel = -math.inf\n",
     "        low_vel = math.inf\n",
     "        elapsed_steps = 0\n",
     "\n",
-    "        while not done:\n",
+    "        while not terminated and not truncated:\n",
     "            action = net.activate((state))  # send state to AI\n",
     "\n",
     "            int_action = convert_to_int_action(action)\n",
-    "            state, reward, done, info = env.step(int_action)\n",
+    "            state, reward, terminated, truncated, info = env.step(int_action)\n",
     "            g.fitness += reward\n",
     "            pos, vel = state\n",
     "            elapsed_steps += 1\n",
@@ -118,22 +312,15 @@
     "                low_vel = vel\n",
     "\n",
     "# Environment setup\n",
-    "env = gym.make(\"MountainCar-v0\")\n",
+    "env = gym.make(\"MountainCar-v0\", new_step_api=True)\n",
     "env._max_episode_steps = 1000\n",
-    "\n",
-    "# Getting file with values\n",
-    "config_path = os.path.abspath(\"config-feedforward.txt\")\n",
-    "config = neat.Config(neat.DefaultGenome, neat.DefaultReproduction, neat.DefaultSpeciesSet, neat.DefaultStagnation, config_path)\n",
-    "p = neat.Population(config)\n",
-    "\n",
-    "p.add_reporter(neat.StdOutReporter(True))  # printing stats\n",
     "\n",
     "num_training_generations = 10\n",
     "winner = p.run(ai_train, num_training_generations)\n",
     "print(winner)\n",
     "\n",
     "# Save best gene in Pickle file\n",
-    "file = open('winner_neat', 'wb')\n",
+    "file = open('winner_neat.p', 'wb')\n",
     "pickle.dump(winner, file)\n",
     "file.close()"
    ]
@@ -142,25 +329,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Close window\n",
-    "if you force interupt the game, the window will still be open. Run this to close the window"
+    "# Test AI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Key: 401\n",
+      "Fitness: -742.0\n",
+      "Nodes:\n",
+      "\t0 DefaultNodeGene(key=0, bias=-0.5171200277800707, response=1.0, activation=sigmoid, aggregation=sum)\n",
+      "\t1 DefaultNodeGene(key=1, bias=-0.03087441999383047, response=1.0, activation=sigmoid, aggregation=sum)\n",
+      "Connections:\n",
+      "\tDefaultConnectionGene(key=(-2, 0), weight=2.1790585722080364, enabled=True)\n",
+      "\tDefaultConnectionGene(key=(-2, 1), weight=-1.3831224485826012, enabled=True)\n",
+      "\tDefaultConnectionGene(key=(-1, 0), weight=-1.564197260668313, enabled=True)\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_7376\\3214724620.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[0menv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgym\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmake\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"MountainCar-v0\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_step_api\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrender_mode\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'human'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_max_episode_steps\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1000\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m \u001b[0mai_test\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_7376\\3214724620.py\u001b[0m in \u001b[0;36mai_test\u001b[1;34m()\u001b[0m\n\u001b[0;32m     20\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mkeyboard\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_pressed\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'esc'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m             \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m             \u001b[1;32massert\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[0maction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwinner_net\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mactivate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
    ],
    "source": [
+    "import keyboard\n",
+    "\n",
+    "def ai_test():\n",
+    "    # open pickle file\n",
+    "    file = open('winner_neat.p', 'rb')\n",
+    "    winner = pickle.load(file)\n",
+    "    file.close()\n",
+    "    print(winner)\n",
+    "\n",
+    "    # Create Neural Network\n",
+    "    winner_net = neat.nn.FeedForwardNetwork.create(winner, config)\n",
+    "\n",
+    "    state = env.reset()\n",
+    "    terminated = False\n",
+    "    truncated = False\n",
+    "    score = 0\n",
+    "\n",
+    "    while not terminated and not truncated:\n",
+    "        #Close window with ESC key\n",
+    "        if keyboard.is_pressed('esc'):\n",
+    "            env.close()\n",
+    "            assert False\n",
+    "\n",
+    "        action = winner_net.activate((state))\n",
+    "\n",
+    "        int_action = convert_to_int_action(action)\n",
+    "        state, reward, terminated, truncated, info = env.step(int_action)\n",
+    "        score += reward\n",
+    "    print(score)\n",
+    "\n",
+    "# Environment setup\n",
+    "env = gym.make(\"MountainCar-v0\", new_step_api=True, render_mode='human')\n",
+    "env._max_episode_steps = 1000\n",
+    "ai_test()\n",
     "env.close()"
    ]
   }
