--- a/gym_game.ipynb
+++ b/gym_game.ipynb
@@ -4,6 +4,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# MountainCar\n",
+    "\n",
+    "\n",
+    "### Observation Space\n",
+    "The observation is a `ndarray` with shape `(2,)` where the elements correspond to the following:\n",
+    "| Num | Observation                          | Min  | Max | Unit         |\n",
+    "|-----|--------------------------------------|------|-----|--------------|\n",
+    "| 0   | position of the car along the x-axis | -Inf | Inf | position (m) |\n",
+    "| 1   | velocity of the car                  | -Inf | Inf | position (m) |\n",
+    "### Action Space\n",
+    "There are 3 discrete deterministic actions:\n",
+    "| Num | Observation             | Value | Unit         |\n",
+    "|-----|-------------------------|-------|--------------|\n",
+    "| 0   | Accelerate to the left  | Inf   | position (m) |\n",
+    "| 1   | Don't accelerate        | Inf   | position (m) |\n",
+    "| 2   | Accelerate to the right | Inf   | position (m) |\n",
+    "### Transition Dynamics:\n",
+    "Given an action, the mountain car follows the following transition dynamics:\n",
+    "*velocity<sub>t+1</sub> = velocity<sub>t</sub> + (action - 1) * force - cos(3 * position<sub>t</sub>) * gravity*\n",
+    "*position<sub>t+1</sub> = position<sub>t</sub> + velocity<sub>t+1</sub>*\n",
+    "where force = 0.001 and gravity = 0.0025. The collisions at either end are inelastic with the velocity set to 0\n",
+    "upon collision with the wall. The position is clipped to the range `[-1.2, 0.6]` and\n",
+    "velocity is clipped to the range `[-0.07, 0.07]`.\n",
+    "### Reward:\n",
+    "The goal is to reach the flag placed on top of the right hill as quickly as possible, as such the agent is\n",
+    "penalised with a reward of -1 for each timestep.\n",
+    "### Starting State\n",
+    "The position of the car is assigned a uniform random value in *[-0.6 , -0.4]*.\n",
+    "The starting velocity of the car is always assigned to 0.\n",
+    "### Episode End\n",
+    "The episode ends if either of the following happens:\n",
+    "1. Termination: The position of the car is greater than or equal to 0.5 (the goal position on top of the right hill)\n",
+    "2. Truncation: The length of the episode is 200."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Human keyboard"
    ]
   },
@@ -76,10 +115,7 @@
     "\n",
     "# Getting file with values\n",
     "config_path = os.path.abspath(\"config-feedforward.txt\")\n",
-    "config = neat.Config(neat.DefaultGenome, neat.DefaultReproduction, neat.DefaultSpeciesSet, neat.DefaultStagnation, config_path)\n",
-    "p = neat.Population(config)\n",
-    "\n",
-    "p.add_reporter(neat.StdOutReporter(True))  # printing stats"
+    "config = neat.Config(neat.DefaultGenome, neat.DefaultReproduction, neat.DefaultSpeciesSet, neat.DefaultStagnation, config_path)\n"
    ]
   },
   {
@@ -117,25 +153,51 @@
     "        # Variables for calculating fitness\n",
     "        high_vel = -math.inf\n",
     "        low_vel = math.inf\n",
+    "        high_pos = -math.inf\n",
+    "        low_pos = math.inf\n",
     "        elapsed_steps = 0\n",
+    "        closest_distance = math.inf\n",
+    "\n",
+    "        time_reward = 0\n",
     "\n",
     "        while not terminated and not truncated:\n",
     "            action = net.activate((state))  # send state to AI\n",
     "\n",
     "            int_action = convert_to_int_action(action)\n",
     "            state, reward, terminated, truncated, info = env.step(int_action)\n",
-    "            g.fitness += reward\n",
+    "            \n",
     "            pos, vel = state\n",
     "            elapsed_steps += 1\n",
     "\n",
-    "            if vel > high_vel:\n",
-    "                high_vel = vel\n",
-    "            if vel < low_vel:\n",
-    "                low_vel = vel\n",
+    "            #if pos > high_pos:\n",
+    "              #  g.fitness += 1\n",
+    "             #   high_pos = pos\n",
+    "            #if pos < low_pos:\n",
+    "            #    g.fitness += 1\n",
+    "           #     low_pos = pos\n",
+    "\n",
+    "            #high_vel = max(high_vel, vel)\n",
+    "            #low_vel = min(low_vel, vel)\n",
+    "            #high_pos = max(high_pos, pos)\n",
+    "            #low_pos = min(low_pos, pos)\n",
+    "            #closest_distance = min(closest_distance, abs(pos - 0.6))\n",
+    "\n",
+    "            #big_vel_swing = (high_vel - low_vel)\n",
+    "            #big_pos_swing = (high_pos - low_pos)\n",
+    "            #g.fitness = big_pos_swing / elapsed_steps\n",
+    "            #g.fitness = (big_vel_swing - 1/closest_distance) / elapsed_steps\n",
+    "            #g.fitness += vel\n",
+    "            #g.fitness += big_pos_swing / elapsed_steps\n",
+    "        #g.fitness /= elapsed_steps\n",
+    "\n",
+    "            #inverted_distance = 1 / distance\n",
     "\n",
     "# Environment setup\n",
     "env = gym.make(\"MountainCar-v0\", new_step_api=True)\n",
     "env._max_episode_steps = 1000\n",
+    "\n",
+    "p = neat.Population(config)\n",
+    "p.add_reporter(neat.StdOutReporter(True))  # printing stats\n",
     "\n",
     "num_training_generations = 10\n",
     "winner = p.run(ai_train, num_training_generations)\n",
@@ -194,6 +256,10 @@
     "# Environment setup\n",
     "env = gym.make(\"MountainCar-v0\", new_step_api=True, render_mode='human')\n",
     "env._max_episode_steps = 1000\n",
+    "\n",
+    "p = neat.Population(config)\n",
+    "p.add_reporter(neat.StdOutReporter(True))  # printing stats\n",
+    "\n",
     "ai_test()\n",
     "env.close()"
    ]
